--- a/app/templates/email/welcome_user.html
+++ b/app/templates/email/welcome_user.html
@@ -1,3 +1,3 @@
 Hello {{user.username}}
-Welcome to pitch
-We have just seen you have signed up for our application and want to welcome you to the family.I hope you will bw able to make the best out of this application.
+Welcome to my blog
+We have just seen you have signed up for our application and want to welcome you to the family.I hope you will bw able to make the best out of this application.You can add and  comment on the blogs . Enjoy bloging.
