--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,12 +25,13 @@
     {%endfor%}
 <br><br>
 </div>
-<div class="col-md-0"></div>
+<div class="col-md-12">
 <h5 class="text-center"><strong>Quote of the day</strong></h5>
 {% for quote in quotes %}
 <p>{{quote.quote}}</p>
 by<strong> {{quote.author}}</strong>
 {% endfor%}
+</div>
 {% if current_user.is_authenticated %}
 
 <div class = "row">
