added fonts in index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
     {%endfor%}
 <br><br>
 </div>
-<div class="col-md-12">
+<div class="col-md-12" style="font-family: 'Shadows Into Light', cursive;font-size: 20px">
 <h5 class="text-center"><strong>Quote of the day</strong></h5>
 {% for quote in quotes %}
 <p>{{quote.quote}}</p>
