--- a/app/templates/comments.html
+++ b/app/templates/comments.html
@@ -6,6 +6,7 @@
 <div class = "container">
 <div class = "jumbotron">
 <h2>{{pitch.name}}</h2>
+<p>Posted on {{pitch.posted_at}}</p>
 
 
 <h2>{% for comment in comments %}</h2>
